--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-pytest==7.4.3
-pytest-cov==4.1.0
-black==23.11.0
-flake8==6.1.0
-mypy==1.7.1
+pytest>=7.0.0
+black>=22.0.0
+flake8>=4.0.0
+mypy>=0.900
+requests>=2.26.0
+aiohttp>=3.8.0
+python-dotenv>=0.19.0
 typing-extensions==4.8.0
 dataclasses==0.6; python_version < '3.7' 
